Fixed text alignment/margin/padding bugs

--- a/css/ccap-psychology.less
+++ b/css/ccap-psychology.less
@@ -384,6 +384,8 @@ div.end-of-book-solutions div.solution > div.body {
  ******************************************************/
 // Reset (ccap-precalculus.less)
 div.book div.chapter > div.titlepage > div > div h1.title {
+  padding-top: 0em;
+  margin-top: 0em;
 
   // string-set and display: none are used to get rid of the "."
   // in the chapter titles, since the class "...-autogenerated" is
@@ -493,6 +495,7 @@ div.section div.titlepage div.abstract {
 }
 div.section div.titlepage div.abstract,
 .note.chapter-objectives {
+  text-align: left;
   padding-left: 0;
 
   margin-top: 0em;
@@ -774,6 +777,7 @@ div.book div.chapter > div.glossary dd::after {
       .x-feature-color(@red, @orange, @white, @red, @cnx-string-link-to-learning);
 
       page-break-inside: avoid;
+      text-align: left;
 
       > .body {
         padding: 0px 10px;
